{
  "sourceLanguage" : "en",
  "strings" : {
    "%@ " : {

    },
    "%@: %lld coughs" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "%1$@: %2$lld coughs"
          }
        }
      }
    },
    "%lld " : {

    },
    "ACCOUNT_SETUP_DESCRIPTION" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "You may login to your existing account. Or create a new one if you don't have one already."
          }
        }
      }
    },
    "ACCOUNT_SIGNED_IN_DESCRIPTION" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "You are already logged in with the account shown below. Continue or change your account by logging out."
          }
        }
      }
    },
    "ACCOUNT_SUBTITLE" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "The CoughSync demonstrates the usage of the Firebase Account Module."
          }
        }
      }
    },
    "Allow Notifications" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Allow Notifications"
          }
        }
      }
    },
    "Change in Coughs: " : {

    },
    "Check In" : {

    },
    "Choose Reminder Time" : {

    },
    "Clock icon" : {

    },
    "Close" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Close"
          }
        }
      }
    },
    "CONSENT_LOADING_ERROR" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Please include a markdown based document named \"ConsentDocument\" in your module Bundle."
          }
        }
      }
    },
    "Contact" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Contact"
          }
        }
      }
    },
    "Contacts" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Contacts"
          }
        }
      }
    },
    "Cough Burden Questionnaire" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cough Burden Questionnaire"
          }
        }
      }
    },
    "Cough Count" : {

    },
    "Cough Sync" : {

    },
    "Coughing Tracking" : {

    },
    "coughs" : {

    },
    "coughs/d" : {

    },
    "CoughSync" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "CoughSync"
          }
        }
      }
    },
    "CoughSync helps you monitor your cough while you sleep." : {

    },
    "Daily Coughs (Past Month)" : {

    },
    "Daily Coughs (Past Week)" : {

    },
    "Day" : {

    },
    "Decrease in coughs" : {

    },
    "Email Report" : {

    },
    "For accurate cough tracking throughout the night, please keep your phone plugged in and charging close to your bed" : {

    },
    "Get Started" : {

    },
    "Grant Access" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Grant Access"
          }
        }
      }
    },
    "HealthKit Access" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "HealthKit Access"
          }
        }
      }
    },
    "HealthKit Data Source" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "HealthKit Data Source"
          }
        }
      }
    },
    "HEALTHKIT_PERMISSIONS_DESCRIPTION" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "This onboarding step allows you to customize the onboarding flow to explain how the application uses the HealthKit data and allows a user to customize the selection."
          }
        }
      }
    },
    "HEALTHKIT_PERMISSIONS_SUBTITLE" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Spezi can access data from HealthKit using the HealthKitDataSource module."
          }
        }
      }
    },
    "Help us understand your health better." : {

    },
    "HL7 FHIR" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "HL7 FHIR"
          }
        }
      }
    },
    "Hourly Coughs (Today)" : {

    },
    "Increase in coughs" : {

    },
    "Initial Assessment" : {

    },
    "Interesting Modules" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Interesting Modules"
          }
        }
      }
    },
    "INTERESTING_MODULES_AREA1_DESCRIPTION" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "The onboarding module allows you to build an onboarding flow like this one."
          }
        }
      }
    },
    "INTERESTING_MODULES_AREA2_DESCRIPTION" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "The application uses HL7 FHIR to provide a common standard to encode data gathered by the application."
          }
        }
      }
    },
    "INTERESTING_MODULES_AREA3_DESCRIPTION" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "The contact module allows you to display contact information in your application."
          }
        }
      }
    },
    "INTERESTING_MODULES_AREA4_DESCRIPTION" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "The HealthKit data source module allows you to fetch data from HealthKit and e.g. transform it to FHIR resources."
          }
        }
      }
    },
    "INTERESTING_MODULES_SUBTITLE" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Here are a few Spezi modules that are interesting to know about ..."
          }
        }
      }
    },
    "Keep Your Phone Plugged In" : {

    },
    "Learn More" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Learn More"
          }
        }
      }
    },
    "LELAND_STANFORD_BIO" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Amasa Leland Stanford (March 9, 1824 – June 21, 1893) was an American industrialist and politician. [...] He and his wife Jane were also the founders of Stanford University, which they named after their late son.\n[https://en.wikipedia.org/wiki/Leland_Stanford]"
          }
        }
      }
    },
    "License Information" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "License Information"
          }
        }
      }
    },
    "Loading cough data..." : {

    },
    "Loading..." : {

    },
    "Next" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Next"
          }
        }
      }
    },
    "NOTIFICATION_PERMISSIONS_DESCRIPTION" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Set your preferred time to receive your daily reminder to start recording (before going to sleep!)"
          }
        }
      }
    },
    "Notifications" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Notifications"
          }
        }
      }
    },
    "OK" : {

    },
    "Onboarding" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Onboarding"
          }
        }
      }
    },
    "Peak Time: %@" : {

    },
    "Please complete the questionnaire to personalize your experience." : {

    },
    "Please fill out the Social Support Questionnaire every day." : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Please fill out the Social Support Questionnaire every day."
          }
        }
      }
    },
    "Ready for bed?" : {

    },
    "Report" : {

    },
    "Save as" : {

    },
    "Schedule" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Schedule"
          }
        }
      }
    },
    "Share Report" : {

    },
    "Spezi Modules" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Spezi Modules"
          }
        }
      }
    },
    "Spezi Scheduler Notifications." : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Spezi Scheduler Notifications."
          }
        }
      }
    },
    "Start Questionnaire" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Start Questionnaire"
          }
        }
      }
    },
    "Start tracking" : {

    },
    "Starting..." : {

    },
    "Stop tracking" : {

    },
    "Summary" : {

    },
    "Swift Package Manager" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Swift Package Manager"
          }
        }
      }
    },
    "Tap below to begin detecting nighttime coughs." : {

    },
    "Tap below to stop detecting coughs.\nTracking for %@" : {

    },
    "Tell us about your cough every week." : {

    },
    "The Spezi Framework" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "The Spezi Framework"
          }
        }
      }
    },
    "This type of event is currently unsupported. Please contact the developer of this app." : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "This type of event is currently unsupported. Please contact the developer of this app."
          }
        }
      }
    },
    "Threshold" : {

    },
    "Time" : {

    },
    "Today" : {

    },
    "Tracking in Progress" : {

    },
    "Trends" : {

    },
    "Unsupported Event" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Unsupported Event"
          }
        }
      }
    },
    "View Cough Frequency Trends →" : {

    },
    "WELCOME_AREA1_DESCRIPTION" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Monitor your coughing patterns with ease."
          }
        }
      }
    },
    "WELCOME_AREA2_DESCRIPTION" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Check in regularly to track how coughing affects your quality of life and see your progress over time."
          }
        }
      }
    },
    "WELCOME_AREA3_DESCRIPTION" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Spezi offers several modules including HealthKit integration, questionnaires, and more ..."
          }
        }
      }
    },
    "WELCOME_SUBTITLE" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "This application helps you track and manage your coughing."
          }
        }
      }
    },
    "Well-Being Tracking" : {

    },
    "Your Account" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Your Account"
          }
        }
      }
    }
  },
  "version" : "1.0"
}